  </tr>
  <tr>
    <td>Web Host</td>
    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-linux-armhf-RELEASE_VERSION.tar.gz">vscodium-reh-web-linux-armhf-RELEASE_VERSION.tar.gz</a></td>
  </tr>
</table>

## PPC 64bits

<table>
  <tr>
    <td rowspan="2">Linux</td>
    <td>Remote Host</td>
    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-linux-ppc64le-RELEASE_VERSION.tar.gz">vscodium-reh-linux-ppc64le-RELEASE_VERSION.tar.gz</a></td>
  </tr>
  <tr>
    <td>Web Host</td>
    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-linux-ppc64le-RELEASE_VERSION.tar.gz">vscodium-reh-web-linux-ppc64le-RELEASE_VERSION.tar.gz</a></td>
  </tr>
</table>

## RISC-V 64bits

<table>
  <tr>
    <td rowspan="3">Linux</td>
    <td>.tar.gz</td>
    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-linux-riscv64-RELEASE_VERSION.tar.gz">VSCodium-linux-riscv64-RELEASE_VERSION.tar.gz</a></td>
  </tr>
  <tr>
    <td>Remote Host</td>
    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-linux-riscv64-RELEASE_VERSION.tar.gz">vscodium-reh-linux-riscv64-RELEASE_VERSION.tar.gz</a></td>
  </tr>
  <tr>
    <td>Web Host</td>
    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-linux-riscv64-RELEASE_VERSION.tar.gz">vscodium-reh-web-linux-riscv64-RELEASE_VERSION.tar.gz</a></td>
  </tr>
</table>

## Loong 64bits

<table>
  <tr>
    <td rowspan="3">Linux</td>
    <td>.tar.gz</td>
    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-linux-loong64-RELEASE_VERSION.tar.gz">VSCodium-linux-loong64-RELEASE_VERSION.tar.gz</a></td>
  </tr>
  <tr>
    <td>Remote Host</td>