@@ -1,0 +1,11 @@
+286fb5f6392b0e937a52901014bc2022a578dea443e20c392d367ed399e8c1ab *chromedriver-v32.2.5-linux-ppc64le.zip
+dfaa0a22fe7aca731d20b91deb7aed355de2e35c65bc09c2f2395d8c78cb53c5 *electron-v32.2.5-linux-ppc64le-debug.zip
+a6ab217b8d7c9f284fea4ba2e35a8623d6d996c76361f6cc33e4b61e6f38dc1a *electron-v32.2.5-linux-ppc64le-symbols.zip
+979479502d505ab2a16907ab8e1b358e88d9374295ce5dbe2207865367bc5972 *electron-v32.2.5-linux-ppc64le.zip
+146a192ac5e05bbd8172e3107cd4a1cae2b4882c98272ec735a2628889803104 *electron.d.ts
+5d7a1064d30dc30c8574878b52702dc0b4c7af5e247642957bbc491e66938cb6 *ffmpeg-v32.2.5-linux-ppc64le.zip
+0ecd17e582e90fa0dda7e9e76429bceb93628ac3231d8d558d723f03e3e9d55c *hunspell_dictionaries.zip
+8a72820655810ea0f917e73eb05ea90115f914060a716d7920e67e6dbc488ee8 *libcxx-objects-v32.2.5-linux-ppc64le.zip
+91aa5b5b835de4846f05ebe9a988323c919825ba8bae182d8b7732c4dbda3d80 *libcxx_headers.zip
+9c4f3cc365da92936bd3df9d3175737bb42558b91d8b2bc40d39e7c1b06c5554 *libcxxabi_headers.zip
+018a86eb6c764a2b9307999225d4fe1ed2eb1d0bb54edf1289fe5c126a814043 *mksnapshot-v32.2.5-linux-ppc64le.zip
